--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
     <title>API</title>
 </head>
 <body>
 
     <button id="add-city-button">Add ʕ•́ᴥ•̀ʔっ</button>
-    <div id="cities-list"></div>
+    <div id="cities-list-container"></div>
+
 </body>
 </html>
